-Fixed issues with ScrabbleModel constructor and most related tests